2008-07-24 Hans Boehm <Hans.Boehm@hp.com> (really Ivan Maidanski)
	* src/atomic_ops/sysdeps/ao_t_is_int.h, src/atomic_ops.h:
	Add parentheses around addr arg for various functions.

2008-07-18 Hans Boehm <Hans.Boehm@hp.com>
	* src/atomic_ops/sysdeps/gcc/powerpc.h:
	Add const to first parameter of load calls (forgot one).

2008-07-18 Hans Boehm <Hans.Boehm@hp.com>
	* doc/README.txt, src/atomic_ops/generalize.h,
	src/atomic_ops/generalize-small.template,
	src/atomic_ops/generalize-small.h,
	src/atomic_ops/sysdeps/acquire_release_volatile.h,
	src/atomic_ops/sysdeps/char_acquire_release_volatile.h,
	src/atomic_ops/sysdeps/int_acquire_release_volatile.h,
	src/atomic_ops/sysdeps/short_acquire_release_volatile.h,
	src/atomic_ops/sysdeps/aligned_atomic_load_store.h,
	src/atomic_ops/sysdeps/int_aligned_atomic_load_store.h,
	src/atomic_ops/sysdeps/short_aligned_atomic_load_store.h,
	src/atomic_ops/sysdeps/ao_t_is_int.h,
	src/atomic_ops/sysdeps/atomic_load_store.h,
	src/atomic_ops/sysdeps/char_atomic_load_store.h,
	src/atomic_ops/sysdeps/int_atomic_load_store.h,
	src/atomic_ops/sysdeps/short_atomic_load_store.h,
	src/atomic_ops/sysdeps/generic_pthread.h,
	src/atomic_ops/sysdeps/read_ordered.h,
	src/atomic_ops/sysdeps/sysdeps/armcc/arm_v6.h,
	src/atomic_ops/sysdeps/gcc/arm.h,
	src/atomic_ops/sysdeps/icc/ia64.h,
	src/atomic_ops/sysdeps/ibmc/powerpc.h:
	Add const to first parameter of load calls.

2008-07-10 Hans Boehm <Hans.Boehm@hp.com>
	* src/atomic_ops/sysdeps/gcc/m68k.h: Remove SMP-unsafe
	AO_or_full, and let it be autogenerated instead.
	
2008-07-03 Hans Boehm <Hans.Boehm@hp.com> (Really Thiemo Seufer)
	* src/atomic_ops/sysdeps/gcc/mips.h: Really add mips support,
	fixing a merge accident.

2008-05-30 Hans Boehm <Hans.Boehm@hp.com> (Really from various Debian
	contributors)
	* doc/Makefile.in, src/Makefile.in, src/atomic_ops/Makefile.in:
	Regenerate.

2008-05-30 Hans Boehm <Hans.Boehm@hp.com> (Really from various Debian
	contributors)